--- a/yuzi-generator-web-backend/.gitignore
+++ b/yuzi-generator-web-backend/.gitignore
@@ -1,14 +1,39 @@
-### Custom Template
+### @author <a href="https://github.com/liyupi">程序员鱼皮</a> ###
+### @from <a href="https://yupi.icu">编程导航知识星球</a> ###
 
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
 .idea
-generated
-.tmep
-target
-application-local.yml
-demo-generator.iml
-yuzi-penerator-basic.iml
+*.iws
+*.iml
+*.ipr
 
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
+### VS Code ###
+.vscode/
 ### Java template
 # Compiled class file
 *.class
@@ -33,7 +58,6 @@ yuzi-penerator-basic.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
 
 ### Maven template
 target/
@@ -48,12 +72,6 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
-# Eclipse m2e generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -64,9 +82,6 @@ buildNumber.properties
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
-# AWS User-specific
-.idea/**/aws.xml
 
 # Generated files
 .idea/**/contentModel.xml
@@ -118,9 +133,6 @@ atlassian-ide-plugin.xml
 # Cursive Clojure plugin
 .idea/replstate.xml
 
-# SonarLint plugin
-.idea/sonarlint/
-
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
@@ -133,22 +145,3 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-### MavensMate template
-#Sublime Text exclusions
-*.sublime-workspace
-*.sublime-project
-*.sublime-settings
-
-#MavensMate exclusions
-config/*
-mm.log
-
-#OPTIONAL Apex scripts exclusion
-# - Rule 1 excludes the contents of the apex-scripts folder
-# - Rule 2 adds in NAMED apex scripts
-# Together: excludes scripts run though MavensMate’s
-#  execute anonymous functionality, while keeping named scripts
-apex-scripts/*
-!apex-scripts/*.cls
-
-!/.gitignore
