--- a/yuzi-penerator-maker/pom.xml
+++ b/yuzi-penerator-maker/pom.xml
@@ -6,15 +6,13 @@
 
     <groupId>com.yupi</groupId>
     <artifactId>yuzi-penerator-maker</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <dependencies>
-        <!-- https://freemarker.apache.org/index.html -->
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>2.3.32</version>
         </dependency>
-
         <!-- https://doc.hutool.cn/ -->
         <dependency>
             <groupId>cn.hutool</groupId>
